[package]
name = "h3o-mvt"
version = "0.3.0"
authors = ["Sylvain Laperche <sylvain.laperche@gmail.com>"]
edition = "2021"
description = "Generate MVT tiles from set of H3 cells."
documentation = "https://docs.rs/h3o-mvt/"
readme = "README.md"
homepage = "https://docs.rs/h3o-mvt"
repository = "https://github.com/HydroniumLabs/h3o-mvt"
license = "BSD-3-Clause"
keywords = ["tile", "mvt", "h3"]
categories = ["science::geo"]

[package.metadata.docs.rs]
all-features = true

[package.metadata.release]
pre-release-commit-message = "release {{version}}"
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
]

[dependencies]
ahash = { version = "0.8", default-features = false, features = ["std", "compile-time-rng"] }
geo = { version = "0.28", default-features = false }
geozero = { version = "0.13", default-features = false, features = ["with-geo", "with-mvt"] }
h3o = { version = "0.6", default-features = false, features = ["std", "geo"] }

[dev-dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }
clap = { version = "4.0", default-features = false, features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive"] }
criterion = { version = "0.5", default-features = false, features = ["plotters", "cargo_bench_support", "html_reports"] }
h3o-zip = { version = "0.1", default-features = false }
float_eq = { version = "1.0", default-features = false }
tokio = { version = "1.0", default-features = false, features = ["macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.5", default-features = false, features = ["cors"] }

[[bench]]
name = "api"
harness = false

[profile.release]
lto = "thin"
